<resources>
	<string name="app_name">kgbc</string>

	<string name="menu_open">Open</string>
	<string name="menu_power_on">Power on</string>
	<string name="menu_power_off">Power off</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_about">About</string>
	<string name="menu_dump_memory">Dump memory</string>

	<string name="gameboy_color">GameBoy Color</string>

	<string name="dumped_bus">Dumped memory to %s</string>
	<string name="general_error">ERROR: Something went wrong, please try again.</string>
	<string name="open_rom_error">ERROR: Invalid ROM type.</string>
	<string name="iset_load_error">ERROR: Could not load CPU instruction set.</string>
</resources>