<?xml version="1.0" encoding="utf-8"?>

<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/menu_open"
		android:title="@string/menu_open"
		app:showAsAction="collapseActionView" />

	<item
		android:id="@+id/menu_power_on"
		android:title="@string/menu_power_on"
		app:showAsAction="collapseActionView" />

	<item
		android:id="@+id/menu_power_off"
		android:title="@string/menu_power_off"
		app:showAsAction="collapseActionView" />

	<item
		android:id="@+id/menu_settings"
		android:title="@string/menu_settings"
		app:showAsAction="collapseActionView" />

	<item
		android:id="@+id/menu_about"
		android:title="@string/menu_about"
		app:showAsAction="collapseActionView" />

	<item
		android:id="@+id/menu_dump_memory"
		android:title="@string/menu_dump_memory"
		app:showAsAction="collapseActionView" />

</menu>